--- a/FrontEnd/supplychaintracker/pubspec.yaml
+++ b/FrontEnd/supplychaintracker/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^0.16.0
   provider: ^4.3.3
   flutter_spinkit: "^4.1.2"
+  simple_animations: ^1.3.3
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +51,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+    
+  assets:
+    - assets/background.png
+    - assets/illustration.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
