--- a/FrontEnd/supplychaintracker/pubspec.yaml
+++ b/FrontEnd/supplychaintracker/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^4.3.3
   flutter_spinkit: "^4.1.2"
   simple_animations: ^1.3.3
+  flutter_form_builder: ^4.2.0
 
 dev_dependencies:
   flutter_test:
