--- a/FrontEnd/supplychaintracker/pubspec.yaml
+++ b/FrontEnd/supplychaintracker/pubspec.yaml
@@ -29,12 +29,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.20.0+1
-  firebase_core : ^0.7.0
+  # firebase_core : ^0.7.0
   cloud_firestore: ^0.16.0
   provider: ^4.3.3
   flutter_spinkit: "^4.1.2"
   simple_animations: ^1.3.3
+  intl: ^0.16.1
   flutter_form_builder: ^4.2.0
+  firebase_core: ^1.0.1
+  firebase_storage: ^7.0.0
+  # firebase_storage: ^3.0.8
+  # firebase_core: ^0.4.0+9
+  image_cropper: ^1.0.2
+  image_picker: ^0.6.0+17
 
 dev_dependencies:
   flutter_test:
