--- a/FrontEnd/supplychaintracker/pubspec.yaml
+++ b/FrontEnd/supplychaintracker/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   qr_flutter: ^3.2.0
   hash: ^1.0.3
   crypto: ^2.1.5
+  url_launcher: ^3.0.3
   flutter_barcode_scanner: ^1.0.1
 
 dev_dependencies:
